# Capstone-Project

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci-signing.yml
Literature_Review_Documents/: Implementation_plan.md  Literature Review Capstone.docx  PQC_decision_log.md  Review_Papers.md  ScienceDirect papers.docx
docs/: RTM.md  TODO.md  architecture.md  deployment.md  phase_1_results_summary.md  protocol.md  test_plan.md  threat_model.md
docs/ADRs/: 0001-kyber-dilithium-adr.md  0002-pqc-algorithm-selection-adr.md  0003-application-layer-wrapper-adr.md  adr-template.md
docs/diagrams/: README.md  key-rotation-sequence.mmd  secure-boot-sequence.mmd  secure-communication-sequence.mmd  system-architecture.mmd
pqc-secure-transport/: CMakeLists.txt
pqc-secure-transport/bench/: CMakeLists.txt  bench_main.c
pqc-secure-transport/examples/: CMakeLists.txt  secure_listener.c  secure_talker.c
pqc-secure-transport/include/: pqc.h
pqc-secure-transport/src/: pqc.c
pqc-secure-transport/tests/: CMakeLists.txt  test_main.c
scripts/ca/: create_ca.ps1  create_ca.sh  issue_node_cert.ps1  issue_node_cert.sh
test-ca/: ca_cert.pem  ca_key.dil  ca_pub.dil  node1_cert.pem  node1_key.dil  node1_pub.dil
tools/ca_helper/: CMakeLists.txt  ca_helper.c
tools/firmware_signing/: README.md  backend_pqc.py  backend_pqc_stub.py  backend_rsa.py  firmware.sig  private.pem  public.pem  requirements.txt  sign.py  verify.py
tools/firmware_signing/tests/: test_sign_verify.py
